<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:checked="true"
        />

    <item
        android:id="@+id/nav_record"
        android:icon="@drawable/ic_record"
        android:title="@string/record" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/chart_histogram"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />

    <item
        android:id="@+id/nav_community"
        android:icon="@drawable/ic_community"
        android:title="@string/community" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />

</menu>
